--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,14 +3,16 @@
 }
 
 .main {
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  max-width: 800px;
   padding: 4rem 0;
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
+
 
 .footer {
   display: flex;
@@ -42,7 +44,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
