--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,9 +10,27 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
+.leftDesc {
+  /* color: blue; */
+  max-width: 500px;
+  margin-right: 2em;
+}
+.rightDesc {
+  display: flex;
+  flex-direction: column;
+}
+
+.rightDesc p {
+  text-align: center;
+  font-size: 2em;
+}
+
+.perHour {
+  font-size: .7em;
+}
 
 .footer {
   display: flex;
